<resources>
    <string name="app_name">SinergiKotaApp</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="masukkan_kata_sandi">Masukkan Kata Sandi</string>
    <string name="login">LOGIN</string>
    <string name="daftar_laporan_sinergi_kota">Daftar Laporan Sinergi Kota</string>
    <string name="deskripsi_laporan_akan_muncul_di_sini">Deskripsi laporan akan muncul di sini...</string>
    <string name="_2026_03_04">2026-03-04</string>
    <string name="judul_laporan">Judul Laporan</string>
    <string name="tambah_laporan">Tambah Laporan</string>
    <string name="unggah_laporan">Unggah Laporan</string>
    <string name="ganti_gambar">Ganti Gambar</string>
    <string name="deskripsi_lengkap">Deskripsi Lengkap</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="kirim_laporan">Kirim Laporan</string>
    <string name="gambarlaporan">gambarlaporan</string>
</resources>