<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_item_report"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/gambarlaporan"
            android:scaleType="centerCrop"
            android:src="@android:drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/tv_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_laporan"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_item_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/deskripsi_laporan_akan_muncul_di_sini"
            android:textColor="#666666" />

        <TextView
            android:id="@+id/tv_item_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_2026_03_04"
            android:textSize="12sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>